前端代码已用版本

--- a/src/main/resources/static/backend/index.html
+++ b/src/main/resources/static/backend/index.html
@@ -130,8 +130,8 @@
                   {
                     id: '2',
                     name: '员工管理',
-                    url: 'page/member/list.html',
-                    icon: 'icon-member'
+                    url: 'page/employee/list.html',
+                    icon: 'icon-employee'
                   },
                   {
                     id: '3',
@@ -142,14 +142,14 @@
                   {
                     id: '4',
                     name: '药品管理',
-                    url: 'page/food/list.html',
-                    icon: 'icon-food'
+                    url: 'page/medicine/list.html',
+                    icon: 'icon-medicine'
                   },
                   {
                     id: '5',
                     name: '套餐管理',
-                    url: 'page/combo/list.html',
-                    icon: 'icon-combo'
+                    url: 'page/package/list.html',
+                    icon: 'icon-package'
                   },
                   {
                     id: '6',
@@ -160,7 +160,7 @@
               //   ],
               // },
             ],
-            iframeUrl: 'page/member/list.html',
+            iframeUrl: 'page/employee/list.html',
             headTitle: '员工管理',
             goBackFlag: false,
             loading: true,
